# bayesian-inference

./: .travis.yml  README.md  bayesian-inference.cabal  makefile  stack.yaml
app/: Main.hs
app/stat-rethinking/: Main.hs
src/Data/: Graph.hs  Permutation.hs  Sample.hs
src/Data/Graph/: Examples.hs
src/Numeric/: Math.hs
src/Numeric/Statistics/: Nonparametric.hs  Utils.hs
src/Numeric/Statistics/Inference/: Bayes.hs
src/Numeric/Statistics/Inference/Bayes/: Approximate.hs  Exact.hs
src/Numeric/Statistics/Inference/Bayes/Exact/: VariableElimination.hs
src/Numeric/Statistics/Sampling/: MetropolisHastings.hs
src/System/Random/MWC/Probability/: Conditional.hs
test/: DocTest.hs  LibSpec.hs  Property.hs
test/Bayes/Exact/: VariableElimination.hs
