name:                bayesian-inference
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ocramz/bayesian-inference
license:             BSD3
license-file:        LICENSE
author:              Marco Zocca
maintainer:          zocca.marco gmail
copyright:           2018 Marco Zocca
category:            Machine Learning
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.2.2, GHC == 8.4.2

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     Numeric.Statistics.Inference.Bayes
  build-depends:       base >= 4.7 && < 5
                     , mwc-probability
                     , mwc-probability-transition >= 0.3.0.3
                     , vector

test-suite spec
  default-language:    Haskell2010
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , bayesian-inference
                     , hspec
                     , QuickCheck

source-repository head
  type:     git
  location: https://github.com/ocramz/bayesian-inference
