name:                bayesian-inference
version:             0.1.0.0
synopsis:            Bayesian inference in Haskell
description:         Bayesian inference in Haskell
homepage:            https://github.com/ocramz/bayesian-inference
license:             BSD3
license-file:        LICENSE
author:              Marco Zocca
maintainer:          zocca.marco gmail
copyright:           2018 Marco Zocca
category:            Machine Learning
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.2.2, GHC == 8.4.2

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     Numeric.Statistics.Inference.Bayes
                       Numeric.Statistics.Inference.Bayes.Approximate
                       Numeric.Statistics.Inference.Bayes.Exact
                       Numeric.Statistics.Inference.Bayes.Exact.VariableElimination
                       Numeric.Statistics.Utils
                       Numeric.Statistics.Sampling.MetropolisHastings
                       Numeric.Math
                       Data.Permutation
  other-modules:       System.Random.MWC.Probability.Conditional
  build-depends:       base >= 4.7 && < 5
                     , algebraic-graphs
                     , bimap
                     , containers
                     , exceptions
                     , ghc-prim
                     , logging-effect
                     , massiv
                     , mtl
                     , mwc-probability
                     , mwc-probability-transition
                     -- , permutation
                     , primitive
                     , transformers
                     , vector
                     -- DEBUG
                     , hspec
                     , QuickCheck

executable graph-export
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , bayesian-inference
                     , algebraic-graphs
                     , text

test-suite spec
  default-language:    Haskell2010
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             LibSpec.hs
  build-depends:       base
                     , bayesian-inference
                     , exceptions
                     , hspec
                     , QuickCheck

test-suite doctest
  default-language:    Haskell2010
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             DocTest.hs
  other-modules:       Bayes.Exact.VariableElimination
  build-depends:       base
                     , bayesian-inference
                     , doctest
                     , exceptions
                     
-- test-suite property
--   default-language:    Haskell2010
--   ghc-options:         -Wall
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is:             Property.hs
--   build-depends:       base
--                      , bayesian-inference
                     
source-repository head
  type:     git
  location: https://github.com/ocramz/bayesian-inference
